syntax = "proto3";
package Jde.App.Log.Proto;

import "google/protobuf/timestamp.proto";

enum ELogLevel{
	Trace = 0;
	Debug = 1;
	Information = 2;
	Warning = 3;
	Error = 4;
	Critical = 5;
	LogLevelNone = 6;
	NoLog = -1;
}

enum EFields{
	FieldsNone=0;
	Template=0x1;
	File=0x2;
	Function=0x4;
	Args=0x8;
}

message LogEntryClient{
	string text=1;
	repeated string args=2;
	ELogLevel level=3;
	uint64 tags=4;
	uint32 line=5;
	google.protobuf.Timestamp time=6;
	uint32 user_pk=7;
	string file=8;
	string function=9;
}

message LogEntryFile{
	google.protobuf.Timestamp time=1;
	bytes template_id=2;
	repeated bytes args=3;
	ELogLevel level=4;
	uint64 tags=5;
	uint32 line=6;
	uint32 user_pk=7;
	bytes file_id=8;
	bytes function_id=9;
}

message ArchiveFile{
	repeated LogEntryFile entries=1;
	repeated String templates=2;
	repeated String files=3;
	repeated String functions=4;
	repeated String args=5;
}

message String{
	bytes id=1;
	string value=2;
}

message StringField{
	EFields field=1;
	String value=2;
}

message FileEntry{
	oneof value{
		LogEntryFile entry=1;
		String str=2;
	}
}